--- a/webChatting/client.html
+++ b/webChatting/client.html
@@ -27,7 +27,8 @@
     <audio id="myAudio" src="http://192.168.10.76:3100/sound/" preload="auto"></audio>
 
     <div id="box" class="box">
-    <div>TO DO : 메세지뒤에 보낸일시</div>
+    <div>TO DO : 빨리만들어요~</div>
+    <div>: 메세지뒤에 보낸일시</div>
     <div>: 보낸사람 받는사람 좌우구별(카통마냥)</div>
     <div>: 메세지 오면 왔다는 표시필요. 작업줄에 깜빡임</div>
     <div>: 신규 메세지 오면 어디까지 읽었는지 필요</div>
